# MicrostructureSimulator

./: CMakeLists.txt
include/: Boundaryconditions.h  Drivingforcesolver.h  Fieldinitializer.h  Fieldwriter.h  Interrupt.h  MPIcommunication.h  Orientationfieldsolver.h  Phasefieldsolver.h  Settings.h  Solutefieldsolver.h  Temperaturefieldsolver.h  Vector2D.h
inputfile/: inputfile
src/: Boundaryconditions.cpp  Drivingforcesolver.cpp  Fieldinitializer.cpp  Fieldwriter.cpp  Interrupt.cpp  MPIcommunication.cpp  Makefile_useless  Orientationfieldsolver.cpp  Phasefieldsolver.cpp  Settings.cpp  Solutefieldsolver.cpp  Temperaturefieldsolver.cpp  main.cpp  mpi.h
